[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "assignment-planner-env"
version = "0.1.0"
description = "Assignment & Bug-Fix Planner Agent OpenEnv"
authors = [
  { name="User", email="user@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "fastapi",
    "uvicorn",
    "pyyaml",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
